# fsp_web

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  vitest.config.ts
.impeccable/: design.json
docs/: calculadora-carga-termica.md
docs/backend/: README.md  auth-y-rls.md  database.md  funciones-y-triggers.md  storage.md
docs/superpowers/plans/: 2026-06-06-auth-profile.md  2026-06-11-scraping.md  (+7 more)
scraping/: .env.example  .gitignore  pyproject.toml
scraping/data/: urls.txt
scraping/notebooks/: 00_inspect.ipynb  01_pipeline.ipynb
scraping/scripts/: run_inspect.py
scraping/src/fsparts_scraper/: checkpoint.py  crawler.py  extractor.py  images.py  llm.py  mapper.py  supabase_client.py
scraping/tests/: test_checkpoint.py  test_crawler.py  test_extractor.py  test_mapper.py  test_supabase_client.py
scripts/: generate-robots.mjs  import.mjs
src/: App.vue  main.ts  style.css
src/layouts/: ShopLayout.vue
src/router/: index.ts
src/stores/: cart.ts  products.ts
src/types/: index.ts
src/views/: CartView.vue  CatalogView.vue  ProductDetailView.vue
supabase/: schema.sql
supabase/migrations/: 20260528_add_ref_code.sql  20260528_admin_rls.sql  20260528_catalog.sql  20260528_seed_catalog.sql  20260605_users_roles_storage.sql  20260611_stock_tables.sql  20260611_stock_tables_fixes.sql  20260611_stock_tables_grants.sql  20260611_ws_roles_notes_rls.sql  20260715_remove_favorites_stock_settings_csv.sql  20260716_orders.sql  20260717_orders_service_role_grants.sql  20260721_checkout_billing_and_addresses.sql
(+101 files in other folders)
