[project]
name = "fsparts-scraper"
version = "0.1.0"
description = "One-time migration scraper: fsparts.org → Supabase"
requires-python = ">=3.11, <=3.14"
dependencies = [
    "openai>=1.30.0",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "supabase>=2.4.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsparts_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
